@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

'title Domain Model

'class Platform {
'  -description
'}

class Organization {

}

class Job{
    name
}

class Employee {
    name
    vatNumber
    website
    phoneNumber
    email
}

'class User {
'    name
'    email
'    password
'}

'Platform "1" -- "*" Organization : has registered >
Organization "1" - "0..*" Employee : has >
Organization "1" - "0..*" Job: owns >
'Task "*" -- "1" Employee: created by >
Employee "1" -- "*" Job : creates >
'Employee "0..1" -- "1" User: acts as >
@enduml